[gd_scene load_steps=11 format=2]

[ext_resource path="res://Weapons/WeaponEntities/FireballEntity.gd" type="Script" id=1]
[ext_resource path="res://Art/fire_particle.png" type="Texture" id=2]
[ext_resource path="res://DamageArea.tscn" type="PackedScene" id=3]

[sub_resource type="Gradient" id=1]
offsets = PoolRealArray( 0, 0.857143, 1 )
colors = PoolColorArray( 1, 1, 1, 1, 1, 1, 1, 0.942857, 1, 1, 1, 0 )

[sub_resource type="GradientTexture" id=2]
gradient = SubResource( 1 )

[sub_resource type="Curve" id=3]
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 1, 0.6584 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=4]
curve = SubResource( 3 )

[sub_resource type="ParticlesMaterial" id=5]
emission_shape = 1
emission_sphere_radius = 3.0
flag_disable_z = true
spread = 180.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 16.0
initial_velocity_random = 0.65
angular_velocity = 8.1085e+008
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale = 0.75
scale_curve = SubResource( 4 )
color_ramp = SubResource( 2 )
hue_variation = 0.4
hue_variation_random = 0.48

[sub_resource type="CircleShape2D" id=6]
radius = 8.0

[sub_resource type="CircleShape2D" id=7]
radius = 2.0

[node name="FireballEntity" type="Node2D"]
script = ExtResource( 1 )

[node name="Particles2D" type="Particles2D" parent="."]
amount = 16
lifetime = 0.5
process_material = SubResource( 5 )
texture = ExtResource( 2 )

[node name="DamageArea" parent="." instance=ExtResource( 3 )]
monitoring = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="DamageArea"]
shape = SubResource( 6 )

[node name="ObstacleDetector" type="Area2D" parent="."]
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="ObstacleDetector"]
shape = SubResource( 7 )

[connection signal="entity_damaged" from="DamageArea" to="." method="_on_DamageArea_entity_damaged"]
[connection signal="body_exited" from="ObstacleDetector" to="." method="_on_ObstacleDetector_body_exited"]
